# action-exec

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: action_executor.py
app/api/v1/: action.py  health.py
app/core/: config.py  logging.py
charts/: README.md  values.yaml
manifests/: deployment.yaml  role.yaml  service_account.yaml
tests/: test_main.py
