[tool.poetry]
name = "incident-agent"
version = "0.1.0"
description = "AI-driven incident agent skeleton"
authors = ["Ant-Tech Employees"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.0.0"
kubernetes = "^29.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
fastapi = "^0.110.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 